# camera_info_manager_py-release

./: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.bak  README.md  conf.py  debian.store  flake8.ini  package.xml  patches.conf  releaser_history.json  rpm.store  setup.py  tracks.yaml
camera_info_manager/: __init__.py  camera_info_manager.py  zoom_camera_info_manager.py
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-jazzy-camera-info-manager-py.spec
src/camera_info_manager/: camera_info_manager.py  zoom_camera_info_manager.py
test/: test_flake8.py
