<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_info_manager_py</name>
  <version>1.0.0</version>
  <description>
    Python interface for camera calibration information.

    This ROS package provides a CameraInfo interface for Python camera
    drivers similar to the C++ camera_info_manager package.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="jmastrangelo@clearpathrobotics.com">Jose Mastrangelo</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/camera_info_manager_py</url>
  <url type="repository">https://github.com/ros-perception/camera_info_manager_py.git</url>
  <url type="bugtracker">https://github.com/ros-perception/camera_info_manager_py/issues</url>

  <depend>rclpy</depend>

  <depend>sensor_msgs</depend>
  <depend>python3-rospkg</depend>
  <depend>python3-yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <build_type>ament_python</build_type>
  </export>

</package>
